sensor/tests/resource/networkpolicy/yaml/netpol-allow-443.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-https
spec:
  podSelector:
    matchLabels:
      app: nginx
  ingress:
  - ports:
    - port: 443
