sensor/tests/resource/networkpolicy/yaml/netpol-block-egress.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: block-all-egress
spec:
  podSelector:
    matchLabels:
      app: nginx
  policyTypes:
     - Egress
